# AI-Autonomous-Research-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  orchestrator.py  settings.py
app/api/: __init__.py  routes.py
app/cli/: __init__.py  __main__.py  main.py
app/core/: __init__.py  alerts.py  guardrails.py  models.py  run_service.py  run_store.py  tracing.py
app/modules/: __init__.py
app/providers/: __init__.py
app/schemas/: __init__.py  content.py  delivery.py  finding.py  notion.py  report.py  research_plan.py  run.py  search.py
app/utils/: artifacts.py  logging.py
autonomous_research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: autonomous_research_agent_plan.md
docs/p0/: architecture_and_interfaces.md  input_output_contract.md  quality_rubric.md  source_acceptance_criteria.md  user_journeys.md
docs/p10/: guardrails_observability_governance.md
docs/p3/: planner_design.md
docs/p4/: search_and_url_collection.md
tests/: test_alert_service.py  test_delivery_service.py  test_fetcher_and_extractor.py  test_gmail_client.py  test_guardrails.py  test_llm_factory.py  test_notion_persistence_service.py  test_openai_provider.py  test_orchestrator_candidates.py  test_orchestrator_delivery.py  test_orchestrator_findings.py  test_orchestrator_persist_findings.py  test_orchestrator_plan_artifact.py  test_orchestrator_report.py  test_planner_service.py  test_reporting_service.py  test_run_service.py  test_search_service.py  test_settings.py  test_summarizer_service.py  test_tracing.py
(+32 files in other folders)
