[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Autonomous research pipeline with MCP integrations and OpenAI-first LLM abstraction."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Autonomous Research Team" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "loguru>=0.7.2",
  "mcp>=1.12.0",
  "openai>=1.109.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.1.0",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.11.6"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
